Исправление замечаний